--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^12.23.6",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.1",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.7.0",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
